Добавлены svg в Прeимущества

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
             </nav>
             <div class="header-utilus">
            <ul class="auth-nav">
-           <li><img src="./images/shapka/envelope.svg" alt="конверт">
+           <li>
+               <!-- <svg>
+                   <use href="./images/sprite.svg#icon-envelope">
+
+                   </use>
+               </svg> -->
+                <img src="./images/shapka/envelope.svg" alt="конверт"> 
                <a class="auth-nav-item"   href="mailto:info@devstudio.com" >info@devstudio.com</a>
             </li>
            <li><img src="./images/shapka/smartphone.svg" alt="смартфон">
@@ -51,25 +57,45 @@
          <ul class="advantages-list">
             <li class="advantages-item">
                 <div class="advantages-picture">
-            <img src="./images/advantages/antenna1.svg" alt="антенна" width="70" height="70"></div>
+                    <svg class="advantages-item-svg">
+                        <use href="./images/sprite.svg#icon-antenna1">
+
+                        </use>
+                    </svg>
+                </div>
             <h3 class="advantages-title">Внимание к деталям</h3>
             <p class="advantages-text">
                 Идейные соображения, а также  начало повседневной работы по формированию позиции.
             </p></li>
             <li class="advantages-item" >
                 <div class="advantages-picture">
-                <img src="./images/advantages/clock1.svg" alt="часы" width="70" height="70"></div>
+                    <svg class="advantages-item-svg">
+                        <use href="./images/sprite.svg#icon-clock1">
+
+                        </use>
+                    </svg>
+                </div>
             <h3 class="advantages-title">Пунктуальность</h3>
             <p class="advantages-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
             <li class="advantages-item">
                 <div class="advantages-picture">
-                <img src="./images/advantages/diagram1.svg" alt="диаграмма" width="70" height="70"></div>
+                    <svg class="advantages-item-svg">
+                        <use href="./images/sprite.svg#icon-diagram1">
+
+                        </use>
+                    </svg>
+                </div>
             <h3 class="advantages-title">Планирование</h3>
            <p class="advantages-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
             <li class="advantages-item">
                 <div class="advantages-picture">
-                    <img src="./images/advantages/astronaut1.svg" alt="астронавт" width="70" height="70"></div>
+                    <svg class="advantages-item-svg">
+                        <use href="./images/sprite.svg#icon-astronaut1">
+
+                        </use>
+                    </svg>
+                </div>
             <h3 class="advantages-title">Современные технологии</h3>
             <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
         </ul>
@@ -249,12 +275,18 @@
                 <div class="container"></div>
                             <h2 class="section-title">Постоянные клиенты</h2>
              <ul class="clients-list">
-                <li class="clients-item"><a class="clients-logo-link" href=""> <img src="./images/logo_client/logo1.svg" alt="Лого YA&CO" width="45" height="50" class="link"> </a> </li>
-                <li class="clients-item"><a class="clients-logo-link" href=""> <img src="./images/logo_client/logo2.svg" alt="Лого CompanyTaglineHere" width="45" height="50"> </a></li>
-                <li class="clients-item"><a class="clients-logo-link" href=""> <img src="./images/logo_client/logo3.svg" alt="Лого Company" width="45" height="50"> </a></li>
-                <li class="clients-item"><a class="clients-logo-link" href=""> <img src="./images/logo_client/logo4.svg" alt="Лого FosterPeters" width="45" height="50"> </a></li>
-                <li class="clients-item"><a class="clients-logo-link" href=""> <img src="./images/logo_client/logo5.svg" alt="Лого Brand" width="45" height="50"> </a></li>
-                <li class="clients-item"><a class="clients-logo-link" href=""> <img src="./images/logo_client/logo6.svg" alt="Лого CompanyTagLine" width="45" height="50"> </a> </li>
+                <li class="clients-item"><a class="clients-logo-link" href="">
+                     <img src="./images/logo_client/logo1.svg" alt="Лого YA&CO" width="45" height="50" class="link"> </a> </li>
+                <li class="clients-item"><a class="clients-logo-link" href=""> 
+                    <img src="./images/logo_client/logo2.svg" alt="Лого CompanyTaglineHere" width="45" height="50"> </a></li>
+                <li class="clients-item"><a class="clients-logo-link" href=""> 
+                    <img src="./images/logo_client/logo3.svg" alt="Лого Company" width="45" height="50"> </a></li>
+                <li class="clients-item"><a class="clients-logo-link" href=""> 
+                    <img src="./images/logo_client/logo4.svg" alt="Лого FosterPeters" width="45" height="50"> </a></li>
+                <li class="clients-item"><a class="clients-logo-link" href=""> 
+                    <img src="./images/logo_client/logo5.svg" alt="Лого Brand" width="45" height="50"> </a></li>
+                <li class="clients-item"><a class="clients-logo-link" href=""> 
+                    <img src="./images/logo_client/logo6.svg" alt="Лого CompanyTagLine" width="45" height="50"> </a> </li>
              </ul>
     </section>
         </main>
@@ -284,18 +316,30 @@
             
               <ul class="social-footer-links-list">
                  <li class="social-footer-links-item">
-                     <img src="./images/social/instagram1.svg" alt="иконка инстаграм" width="20" height="20">
+                    <svg class="social-links-item-svg">
+                        <use href="./images/sprite.svg#icon-instagram1">
+                        </use>
+                    </svg>
                  <a class="social-links-item-link" href="" aria-label="Ссылка на инстаграм"></a>
              </li>
                  <li class="social-footer-links-item">
-                 <img src="./images/social/twitter1.svg" alt="иконка твиттер" width="20" height="20">
+                    <svg class="social-links-item-svg">
+                        <use href="./images/sprite.svg#icon-twitter1">
+                        </use>
+                    </svg>
                  <a class="social-links-item-link" href="" aria-label="Ссылка на твиттер"></a>
              </li>
                  <li class="social-footer-links-item">
-                 <img src="./images/social/facebook1.svg" alt="иконка фейсбук" width="20" height="20">
+                    <svg class="social-links-item-svg">
+                        <use href="./images/sprite.svg#icon-facebook1">
+                        </use>
+                    </svg>
                  <a class="social-links-item-link" href="" aria-label="Ссылка на фейсбук"></a></li>
                  <li class="social-footer-links-item">
-                 <img src="./images/social/linkedin1.svg" alt="иконка линкедин" width="20" height="20">
+                    <svg class="social-links-item-svg">
+                        <use href="./images/sprite.svg#icon-linkedin1">
+                        </use>
+                    </svg>
                  <a class="social-links-item-link" href="" aria-label="Ссылка на линкедин"></a></li>
               </ul>  
              </div>
@@ -304,8 +348,13 @@
                 </div>  
              <div> 
                 <a class="button-footer"> 
-                <span class="icon-send"></span> 
+                <!-- <span class="icon-send"></span>  -->
                 Подписаться 
+               <svg class="icon-send">
+                   <use href="./images/sprite.svg#icon-iconsend">
+
+                   </use>
+               </svg>
               </a> 
           </div> 
           </div>
