--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,21 @@
         </nav>
         <div class="header-utilus">
        <ul class="auth-nav">
-       <li><img src="./images/shapka/envelope.svg" alt="конверт">
+        <li>
+            <svg class="auth-nav-icon1">
+               <use href="./images/sprite.svg#icon-envelope">
+
+               </use>
+           </svg> 
+            
            <a class="auth-nav-item"   href="mailto:info@devstudio.com" >info@devstudio.com</a>
         </li>
-       <li><img src="./images/shapka/smartphone.svg" alt="смартфон">
+       <li>
+        <svg class="auth-nav-icon2">
+            <use href="./images/sprite.svg#icon-smartphone">
+
+            </use>
+        </svg> 
            <a class="auth-nav-item" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
     </ul>
