Добавлены svg в clients

--- a/index.html
+++ b/index.html
@@ -281,18 +281,47 @@
                             <h2 class="section-title">Постоянные клиенты</h2>
              <ul class="clients-list">
                 <li class="clients-item"><a class="clients-logo-link" href="">
-                     <img src="./images/logo_client/logo1.svg" alt="Лого YA&CO" 
-                     width="45" height="50" class="link"> </a> </li>
+                    <svg class="clients-item-svg1">
+                        <use href="./images/sprite.svg#icon-logo1">
+                        </use>
+                    </svg>
+                     </a> 
+                </li>
                 <li class="clients-item"><a class="clients-logo-link" href=""> 
-                    <img src="./images/logo_client/logo2.svg" alt="Лого CompanyTaglineHere" width="45" height="50"> </a></li>
+                    <svg class="clients-item-svg2">
+                        <use href="./images/sprite.svg#icon-logo2">
+                        </use>
+                    </svg>
+                </a>
+            </li>
                 <li class="clients-item"><a class="clients-logo-link" href=""> 
-                    <img src="./images/logo_client/logo3.svg" alt="Лого Company" width="45" height="50"> </a></li>
+                    <svg class="clients-item-svg3">
+                        <use href="./images/sprite.svg#icon-logo3">
+                        </use>
+                    </svg>
+                </a>
+            </li>
                 <li class="clients-item"><a class="clients-logo-link" href=""> 
-                    <img src="./images/logo_client/logo4.svg" alt="Лого FosterPeters" width="45" height="50"> </a></li>
+                    <svg class="clients-item-svg4">
+                        <use href="./images/sprite.svg#icon-logo4">
+                        </use>
+                    </svg>
+                 </a>
+                </li>
                 <li class="clients-item"><a class="clients-logo-link" href=""> 
-                    <img src="./images/logo_client/logo5.svg" alt="Лого Brand" width="45" height="50"> </a></li>
+                    <svg class="clients-item-svg5">
+                        <use href="./images/sprite.svg#icon-logo5">
+                        </use>
+                    </svg>
+                </a>
+            </li>
                 <li class="clients-item"><a class="clients-logo-link" href=""> 
-                    <img src="./images/logo_client/logo6.svg" alt="Лого CompanyTagLine" width="45" height="50"> </a> </li>
+                    <svg class="clients-item-svg6">
+                        <use href="./images/sprite.svg#icon-logo6">
+                        </use>
+                    </svg>
+                </a> 
+            </li>
              </ul>
     </section>
         </main>
