--- a/index.html
+++ b/index.html
@@ -23,20 +23,16 @@
             </nav>
             <div class="header-utilus">
            <ul class="auth-nav">
-           <li>
-                <svg class="auth-nav-icon1">
-                   <use href="./images/sprite.svg#icon-envelope">
-
-                   </use>
+           <li class="auth-nav-icon">
+                <svg class="auth-nav-icon link" width="16" height="11.2">
+                   <use href="./images/sprite.svg#icon-envelope"> </use> 
                </svg> 
                 
                <a class="auth-nav-item"   href="mailto:info@devstudio.com" >info@devstudio.com</a>
             </li>
-           <li>
-            <svg class="auth-nav-icon2">
-                <use href="./images/sprite.svg#icon-smartphone">
-
-                </use>
+           <li class="auth-nav-icon">
+            <svg class="auth-nav-icon link" width="10" height="14.94">
+                <use href="./images/sprite.svg#icon-smartphone"> </use>
             </svg> 
                <a class="auth-nav-item" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
@@ -280,42 +276,48 @@
                 <div class="container"></div>
                             <h2 class="section-title">Постоянные клиенты</h2>
              <ul class="clients-list">
-                <li class="clients-item"><a class="clients-logo-link" href="">
+                <li class="clients-item">
+                    <a class="clients-logo-link" href="">
                     <svg class="clients-item-svg1">
                         <use href="./images/sprite.svg#icon-logo1">
                         </use>
                     </svg>
                      </a> 
                 </li>
-                <li class="clients-item"><a class="clients-logo-link" href=""> 
+                <li class="clients-item">
+                    <a class="clients-logo-link" href=""> 
                     <svg class="clients-item-svg2">
                         <use href="./images/sprite.svg#icon-logo2">
                         </use>
                     </svg>
                 </a>
             </li>
-                <li class="clients-item"><a class="clients-logo-link" href=""> 
+                <li class="clients-item">
+                    <a class="clients-logo-link" href=""> 
                     <svg class="clients-item-svg3">
                         <use href="./images/sprite.svg#icon-logo3">
                         </use>
                     </svg>
                 </a>
             </li>
-                <li class="clients-item"><a class="clients-logo-link" href=""> 
+                <li class="clients-item">
+                    <a class="clients-logo-link" href=""> 
                     <svg class="clients-item-svg4">
                         <use href="./images/sprite.svg#icon-logo4">
                         </use>
                     </svg>
                  </a>
                 </li>
-                <li class="clients-item"><a class="clients-logo-link" href=""> 
+                <li class="clients-item">
+                    <a class="clients-logo-link" href=""> 
                     <svg class="clients-item-svg5">
                         <use href="./images/sprite.svg#icon-logo5">
                         </use>
                     </svg>
                 </a>
             </li>
-                <li class="clients-item"><a class="clients-logo-link" href=""> 
+                <li class="clients-item">
+                    <a class="clients-logo-link" href=""> 
                     <svg class="clients-item-svg6">
                         <use href="./images/sprite.svg#icon-logo6">
                         </use>
