--- a/portfolio.html
+++ b/portfolio.html
@@ -22,26 +22,22 @@
         </ul>
         </nav>
         <div class="header-utilus">
-       <ul class="auth-nav">
-        <li>
-            <svg class="auth-nav-icon1">
-               <use href="./images/sprite.svg#icon-envelope">
-
-               </use>
-           </svg> 
-            
-           <a class="auth-nav-item"   href="mailto:info@devstudio.com" >info@devstudio.com</a>
-        </li>
-       <li>
-        <svg class="auth-nav-icon2">
-            <use href="./images/sprite.svg#icon-smartphone">
-
-            </use>
-        </svg> 
-           <a class="auth-nav-item" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-    </ul>
-</div>
+            <ul class="auth-nav">
+            <li class="auth-nav-icon">
+                 <svg class="auth-nav-icon link" width="16" height="11.2">
+                    <use href="./images/sprite.svg#icon-envelope"> </use> 
+                </svg> 
+                 
+                <a class="auth-nav-item"   href="mailto:info@devstudio.com" >info@devstudio.com</a>
+             </li>
+            <li class="auth-nav-icon">
+             <svg class="auth-nav-icon link" width="10" height="14.94">
+                 <use href="./images/sprite.svg#icon-smartphone"> </use>
+             </svg> 
+                <a class="auth-nav-item" href="tel:+380961111111">+38 096 111 11 11</a>
+             </li>
+         </ul>
+     </div>
     </div>
     </header>
 
