Aligned footer-center-title

--- a/index.html
+++ b/index.html
@@ -305,14 +305,14 @@
                 <h2 class="clients-title title">Постоянные клиенты</h2>
                 <ul class="clients-list list">
                     <li class="clients-item">
-                        <a class="clients-item-link link" href="">
+                        <a class="clients-logo-link" href="">
                             <svg class="clients-item-svg1">
                                 <use href="./images/sprite.svg#icon-logo1">
                                 </use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-item-link">
+                    <li class="clients-item">
                         <a class="clients-logo-link" href="">
                             <svg class="clients-item-svg2">
                                 <use href="./images/sprite.svg#icon-logo2">
@@ -320,7 +320,7 @@
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-item-link">
+                    <li class="clients-item">
                         <a class="clients-logo-link" href="">
                             <svg class="clients-item-svg3">
                                 <use href="./images/sprite.svg#icon-logo3">
@@ -328,7 +328,7 @@
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-item-link">
+                    <li class="clients-item">
                         <a class="clients-logo-link" href="">
                             <svg class="clients-item-svg4">
                                 <use href="./images/sprite.svg#icon-logo4">
@@ -336,7 +336,7 @@
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-item-link">
+                    <li class="clients-item">
                         <a class="clients-logo-link" href="">
                             <svg class="clients-item-svg5">
                                 <use href="./images/sprite.svg#icon-logo5">
@@ -344,7 +344,7 @@
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-item-link">
+                    <li class="clients-item">
                         <a class="clients-logo-link" href="">
                             <svg class="clients-item-svg6">
                                 <use href="./images/sprite.svg#icon-logo6">
@@ -417,7 +417,7 @@
                     </ul>
                 </div>
                 <div class="subscribe">
-                    <b class="title-social-footer">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
+                    <b class="footer-center-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
                 </div>
                 <div>
                     <a class="button-footer">
