--- a/portfolio.html
+++ b/portfolio.html
@@ -274,7 +274,7 @@
                     </ul>
                 </div>
                 <div class="subscribe">
-                    <b class="title-social-footer">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
+                    <b class="footer-center-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
                 </div>
                 <div>
                     <a class="button-footer">
