--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                             <svg class="auth-nav-icon" width="16" height="11.2">
                                 <use href="./images/sprite.svg#icon-envelope"> </use>
                             </svg>
-                            info@devstudio.com</a>
+                            info@devstudio.com
+                        </a>
                     </li>
                     <li class="auth-nav-list-item">
                         <a class="auth-nav-link" href="tel:+380961111111">
@@ -305,7 +306,7 @@
                 <h2 class="clients-title title">Постоянные клиенты</h2>
                 <ul class="clients-list list">
                     <li class="clients-item">
-                        <a class="clients-logo-link" href="">
+                        <a class="clients-item-link link" href="">
                             <svg class="clients-item-svg1">
                                 <use href="./images/sprite.svg#icon-logo1">
                                 </use>
@@ -313,7 +314,7 @@
                         </a>
                     </li>
                     <li class="clients-item">
-                        <a class="clients-logo-link" href="">
+                        <a class="clients-item-link link" href="">
                             <svg class="clients-item-svg2">
                                 <use href="./images/sprite.svg#icon-logo2">
                                 </use>
@@ -321,7 +322,7 @@
                         </a>
                     </li>
                     <li class="clients-item">
-                        <a class="clients-logo-link" href="">
+                        <a class="clients-item-link link" href="">
                             <svg class="clients-item-svg3">
                                 <use href="./images/sprite.svg#icon-logo3">
                                 </use>
@@ -329,7 +330,7 @@
                         </a>
                     </li>
                     <li class="clients-item">
-                        <a class="clients-logo-link" href="">
+                        <a class="clients-item-link link" href="">
                             <svg class="clients-item-svg4">
                                 <use href="./images/sprite.svg#icon-logo4">
                                 </use>
@@ -337,7 +338,7 @@
                         </a>
                     </li>
                     <li class="clients-item">
-                        <a class="clients-logo-link" href="">
+                        <a class="clients-item-link link" href="">
                             <svg class="clients-item-svg5">
                                 <use href="./images/sprite.svg#icon-logo5">
                                 </use>
@@ -345,7 +346,7 @@
                         </a>
                     </li>
                     <li class="clients-item">
-                        <a class="clients-logo-link" href="">
+                        <a class="clients-item-link link" href="">
                             <svg class="clients-item-svg6">
                                 <use href="./images/sprite.svg#icon-logo6">
                                 </use>
@@ -421,8 +422,7 @@
                 </div>
                 <div>
                     <a class="button-footer">
-                        <!-- <span class="icon-send"></span>  -->
-                        Подписаться
+                                        Подписаться
                         <svg width="24" height="24" class="icon-send-svg">
                             <use href="./images/sprite.svg#icon-iconsend">
                             </use>
